[B]2.1.1[/B]
- Fixed player links on main indexers

[B]2.1.0[/B]
- Added news item
- Minor other tweaks

[B]2.0.X[/B]
- Complete addon rework
- Changed artwork

[B]1.2.5[/B]
- Added Hebrew translation by Eng2Heb
- Cosmetics

[B]1.2.4[/B]
- Cosmetics

[B]1.2.3[/B]
- Added Live stream

[B]1.2.2[/B]
- Cosmetics
- Various tweaks in addon.xml

[B]1.2.1[/B]
- Fixed playback for youtube, web tv videos
- Made youtube addon mandatory

[B]1.2.0[/B]
- Added Web TV section
- Added context menu with clear cache function (root menu only)
- Misc code tweaks here & there
- Removed screenshots

[B]1.1.1[/B]
- Rebased to utilize tulip libraries

[B]1.1.0[/B]
- Tweaked sections
- Added add-on screenshots

[B]1.0.0[/B]
- Initial version